java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint194018b.pass
package org.netbeans.test.java.hints;

import Map.Entry;
import java.util.Map.*;
import static Collections.sort;
import static Collections.*;

public class ImportInImport {
    
}
